--- a/Wpf/Dialog/CreateNewComputer.xaml
+++ b/Wpf/Dialog/CreateNewComputer.xaml
@@ -3,7 +3,9 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:local="clr-namespace:Wpf.Dialog"
+        MouseDown="Window_MouseDown"
         mc:Ignorable="d"
         WindowStyle="None"
         Background="Transparent"
@@ -17,18 +19,61 @@
                 <RowDefinition Height="120*" />
             </Grid.RowDefinitions>
             <StackPanel Margin="10,10,10,0">
-            
+
                 <TextBlock HorizontalAlignment="Center" FontSize="20" TextDecorations="Underline" FontWeight="Bold" Foreground="White" Margin="0 0 0 10">
                     ADD COMPUTER
                 </TextBlock>
+                
+                <Label Content="Computer Name" Foreground="White" Opacity="0.5"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox x:Name="computerName" 
+                            Foreground="White"  
+                            Width="380"
+                            BorderThickness="0"
+                            TextChanged="computerName_TextChanged"/>
+                    <iconPacks:PackIconMaterial Kind="Laptop" 
+                                                VerticalAlignment="Center" 
+                                                HorizontalAlignment="Center"
+                                                Foreground="White"/>
 
-                <Label Content="Computer Name" Foreground="White"/>
-                <TextBox x:Name="computerName" Foreground="White" BorderBrush="White" Text="{Binding CurrentComputer.ComputerName, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
-                <Label Content="{Binding ElementName=computerName, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red"/>
+                </StackPanel>
+                <Border Width="400"
+                         Height="2"
+                         Background="White"
+                         x:Name="bdName"
+                         Margin="0 2 0 0"
+                         Opacity="0.5"/>
+                <TextBox x:Name="hiddenComputerName" 
+                         Foreground="White" 
+                         BorderBrush="White" 
+                         Visibility="Collapsed"
+                         Text="{Binding CurrentComputer.ComputerName, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
+                <Label Content="{Binding ElementName=hiddenComputerName, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red"/>
 
-                <Label Content="Computer Spec" Foreground="White"/>
-                <TextBox x:Name="computerSpec" Foreground="White" BorderBrush="White" Text="{Binding CurrentComputer.ComputerSpec, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
-                <Label Content="{Binding ElementName=computerSpec, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
+                <Label Content="Computer Spec" Foreground="White" Opacity="0.5"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox x:Name="computerSpec" 
+                            Foreground="White"  
+                            Width="380"
+                            BorderThickness="0"
+                            TextChanged="computerSpec_TextChanged"/>
+                    <iconPacks:PackIconMaterial Kind="CogOutline" 
+                                VerticalAlignment="Center" 
+                                HorizontalAlignment="Center"
+                                Foreground="White"/>
+
+                </StackPanel>
+                <Border Width="400"
+                         Height="2"
+                         Background="White"
+                         x:Name="bdSpec"
+                         Margin="0 2 0 0"
+                         Opacity="0.5"/>
+                <TextBox x:Name="hiddenComputerSpec" 
+                         Foreground="White" BorderBrush="White" 
+                         Visibility="Collapsed"
+                         Text="{Binding CurrentComputer.ComputerSpec, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
+                <Label Content="{Binding ElementName=hiddenComputerSpec, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
 
             </StackPanel>
 
