--- a/Wpf/Dialog/CreateNewProduct.xaml
+++ b/Wpf/Dialog/CreateNewProduct.xaml
@@ -4,14 +4,16 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:local="clr-namespace:Wpf.Dialog"
         xmlns:localView="clr-namespace:Wpf.MVVM.View"
         mc:Ignorable="d"
         WindowStyle="None"
         Background="Transparent"
+        MouseDown="Window_MouseDown"
         AllowsTransparency="True"
         WindowStartupLocation="CenterScreen"
-        Height="600" Width="400">
+        Height="650" Width="420">
 
     <Border Background="#FF2B2A2A" CornerRadius="10">
         <Grid Margin="0,0,0,83">
@@ -26,19 +28,84 @@
                 <TextBlock HorizontalAlignment="Center" FontSize="20" TextDecorations="Underline" FontWeight="Bold" Foreground="White" Margin="0 0 0 10">
                         ADD PRODUCT
                 </TextBlock>
-                <Label Content="Product Name" Foreground="White"/>
-                <TextBox x:Name="productName" Foreground="White" BorderBrush="White" Text="{Binding CurrentProduct.ProductName, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
-                <Label Content="{Binding ElementName=productName, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
+                <Label Content="Product Name" Foreground="White" Opacity="0.5"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox x:Name="productName" 
+                            Foreground="White"  
+                            Width="380"
+                            BorderThickness="0"
+                            TextChanged="productname_TextChanged"/>
+                    <iconPacks:PackIconMaterial Kind="FoodOutline" 
+                                VerticalAlignment="Center" 
+                                HorizontalAlignment="Center"
+                                Foreground="White"/>
 
-                <Label Content="Product Quantity" Foreground="White"/>
-                <TextBox x:Name="quantity" Foreground="White" BorderBrush="White" Text="{Binding CurrentProduct.ProductQuantity, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True, Converter={StaticResource intConverter}}"/>
-                <Label Content="{Binding ElementName=quantity, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
+                </StackPanel>
+                <Border Width="400"
+                        Height="2"
+                        Background="White"
+                        x:Name="bdName"
+                        Margin="0 2 0 0"
+                        Opacity="0.5"/>
+                <TextBox x:Name="hiddenProductName" 
+                         Foreground="White" BorderBrush="White" 
+                         Visibility="Collapsed"
+                         Text="{Binding CurrentProduct.ProductName, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True}"/>
+                <Label Content="{Binding ElementName=hiddenProductName, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
 
-                <Label Content="Product Price" Foreground="White"/>
-                <TextBox x:Name="price" Foreground="White" BorderBrush="White" Text="{Binding CurrentProduct.ProductPrice, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True, Converter={StaticResource intConverter}}"/>
-                <Label Content="{Binding ElementName=price, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
+                <Label Content="Product Quantity" Foreground="White" Opacity="0.5"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox x:Name="quantity" 
+                            Foreground="White"  
+                            Width="380"
+                            BorderThickness="0"
+                            TextChanged="quantity_TextChanged"/>
+                    <iconPacks:PackIconMaterial Kind="Counter" 
+                                                VerticalAlignment="Center" 
+                                                HorizontalAlignment="Center"
+                                                Foreground="White"/>
 
-                <Label Content="Product Type" Margin="0 15 0 0" Foreground="White"/>
+                </StackPanel>
+                <Border Width="400"
+                        Height="2"
+                        Background="White"
+                        x:Name="bdQuantity"
+                        Margin="0 2 0 0"
+                        Opacity="0.5"/>
+                <TextBox x:Name="hiddenQuantity" 
+                         Foreground="White" 
+                         BorderBrush="White" 
+                         Visibility="Collapsed"
+                         Text="{Binding CurrentProduct.ProductQuantity, UpdateSourceTrigger=PropertyChanged,ValidatesOnNotifyDataErrors=True, Converter={StaticResource intConverter}}"/>
+                <Label Content="{Binding ElementName=hiddenQuantity, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
+
+                <Label Content="Product Price" Foreground="White" Opacity="0.5"/>
+                <StackPanel Orientation="Horizontal">
+                    <TextBox x:Name="price" 
+                            Foreground="White"  
+                            Width="380"
+                            BorderThickness="0"
+                            TextChanged="price_TextChanged"/>
+                    <iconPacks:PackIconMaterial Kind="CurrencyUsd" 
+                                                VerticalAlignment="Center" 
+                                                HorizontalAlignment="Center"
+                                                Foreground="White"/>
+
+                </StackPanel>
+                <Border Width="400"
+                        Height="2"
+                        Background="White"
+                        x:Name="bdPrice"
+                        Margin="0 2 0 0"
+                        Opacity="0.5"/>
+                <TextBox x:Name="hiddenPrice" 
+                         Foreground="White" 
+                         BorderBrush="White"
+                         Visibility="Collapsed"
+                         Text="{Binding CurrentProduct.ProductPrice, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True, Converter={StaticResource intConverter}}"/>
+                <Label Content="{Binding ElementName=hiddenPrice, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
+
+                <Label Content="Product Type" Margin="0 15 0 0" Foreground="White" Opacity="0.5"/>
                 <ComboBox x:Name="cbType" Background="Transparent" Foreground="White" BorderBrush="White" SelectedValue="{Binding CurrentProduct.ProductType, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=True}" 
                       SelectedValuePath="Tag" Style="{StaticResource theComboBox}"
                       ItemContainerStyle="{DynamicResource theComboBoxItem}">
@@ -47,7 +114,7 @@
                 </ComboBox>
                 <Label Content="{Binding ElementName=cbType, Path=(Validation.Errors)[0].ErrorContent}" Foreground="Red" />
 
-                <Label Content="Product Image" Margin="0 15 0 0" Foreground="White"/>
+                <Label Content="Product Image" Margin="0 15 0 0" Foreground="White" Opacity="0.5"/>
                 <Rectangle HorizontalAlignment="Center" Width="120" Height="120">
                     <Rectangle.Fill>
                         <ImageBrush x:Name="productImage" RenderOptions.BitmapScalingMode="HighQuality" ImageSource="{Binding CurrentProduct.ProductImg, Converter={StaticResource productImgConverter}}"/>
@@ -69,7 +136,7 @@
 
             </StackPanel>
 
-            <StackPanel Orientation="Horizontal" Margin="110,399,110,-171">
+            <StackPanel Orientation="Horizontal" Margin="110,415,110,-187">
                 <Button Content="Create" Command="{Binding SubmitCommand}" Focusable="True" Margin="5" Style="{StaticResource ModernButtonStyle}"
                         Height="40" Width="80"/>
                 <Button Content="Cancel" x:Name="btnCancel" Click="btnCancel_Click" Margin="5" Style="{StaticResource ModernButtonStyle}"
