--- a/Wpf/MVVM/View/M_UsersView.xaml
+++ b/Wpf/MVVM/View/M_UsersView.xaml
@@ -13,6 +13,7 @@
             <StackPanel.Resources>
                 <local:RoleConverter x:Key="roleConverter"/>
                 <local:ComputerConverter x:Key="computerConverter"/>
+                <local:ImageConverter x:Key="imageConverter"/>
             </StackPanel.Resources>
 
             <DockPanel Margin="0 12 5 0">
@@ -31,11 +32,24 @@
               RowStyle="{DynamicResource DataGridRowStyle1}" Margin="0 20 30 0" x:Name="userDataGrid">
 
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="ID" IsReadOnly="True" Width="*" Binding="{Binding UserId}"/>
+                    <DataGridTextColumn Header="ID" IsReadOnly="True" Width="auto" Binding="{Binding UserId}"/>
 
-                    <DataGridTextColumn Header="Username" IsReadOnly="True" Width="*" Binding="{Binding UserName}"/>
+                    <DataGridTemplateColumn Header="User" IsReadOnly="True" Width="auto">
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Ellipse Width="30" Height="30" Margin="0 0 10 0">
+                                        <Ellipse.Fill>
+                                            <ImageBrush x:Name="userAvatar" RenderOptions.BitmapScalingMode="HighQuality" ImageSource="{Binding UserAvatar, Converter={StaticResource imageConverter}}"/>
+                                        </Ellipse.Fill>
+                                    </Ellipse>
+                                    <TextBlock Text="{Binding UserName}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
 
-                    <DataGridTextColumn Header="Email" IsReadOnly="True" Width="*" Binding="{Binding UserEmail}"/>
+                    <DataGridTextColumn Header="Email" IsReadOnly="True" Width="auto" Binding="{Binding UserEmail}"/>
 
                     <DataGridTextColumn Header="Password" IsReadOnly="True" Width="*" Binding="{Binding UserPassword}" Visibility="Collapsed"/>
 
