--- a/Wpf/Manager.xaml
+++ b/Wpf/Manager.xaml
@@ -48,13 +48,15 @@
 
                 <Ellipse Width="100" Height="100">
                     <Ellipse.Fill>
-                        <ImageBrush RenderOptions.BitmapScalingMode="HighQuality" ImageSource="Images/default.png"/>
+                        <ImageBrush x:Name="avatar" RenderOptions.BitmapScalingMode="HighQuality" ImageSource="Images/default.png"/>
                     </Ellipse.Fill>
                 </Ellipse>
+                <TextBox x:Name="txtUserID" Visibility="Collapsed"/>
                 <TextBlock FontSize="18" FontWeight="Bold" TextAlignment="Center"
+                           x:Name="txtUsername"
                         Foreground="White" Text=""
                         HorizontalAlignment="Center" Margin="0 10 0 0"/>
-                <TextBlock FontFamily="Helvetica" FontSize="16" Text="" FontWeight="SemiBold"
+                <TextBlock FontFamily="Helvetica" FontSize="16" Text="Manager" FontWeight="SemiBold"
                         TextAlignment="Center" HorizontalAlignment="Center" Foreground="LightGray"
                         Margin="0 10 0 0"/>
                 <Button Style="{StaticResource MaterialDesignFlatButton}"
